--- a/src/index.htm
+++ b/src/index.htm
@@ -10,7 +10,7 @@
         * IE doesn't support <template>, see http://caniuse.com/#feat=template
         */
 
-        #test-template {
+        #simple-grid-template {
             display: none;
         }
     </style>
